--- a/animation_test_app/app/src/main/res/layout/activity_main.xml
+++ b/animation_test_app/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:app="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:background="#e8fff4"
+             tools:context=".MainActivity">
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:id="@+id/test_textView"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:background="@android:drawable/ic_dialog_info" />
 
-</android.support.constraint.ConstraintLayout>
+    <FrameLayout
+            android:id="@+id/menuLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ffd876"
+            android:visibility="gone">
+
+        <Button
+                android:id="@+id/button1"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="bottom|end"
+                android:background="@android:drawable/ic_menu_myplaces"
+                android:visibility="gone" />
+
+        <Button
+                android:id="@+id/button2"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="bottom|end"
+                android:background="@android:drawable/ic_delete"
+                android:visibility="gone" />
+
+        <Button
+                android:id="@+id/button3"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="bottom|end"
+                android:background="@android:drawable/ic_dialog_alert"
+                android:visibility="gone" />
+
+        <Button
+                android:id="@+id/button4"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="bottom|end"
+                android:background="@android:drawable/ic_btn_speak_now"
+                android:visibility="gone" />
+
+        <Button
+                android:id="@+id/button5"
+                android:layout_width="50sp"
+                android:layout_height="50sp"
+                android:layout_gravity="bottom|end"
+                android:background="@android:drawable/ic_input_add"
+                android:visibility="gone" />
+    </FrameLayout>
+
+    <Button
+            android:id="@+id/test_Button"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
+            android:background="@android:drawable/ic_menu_add"
+            android:layout_gravity="bottom|end" />
+
+</FrameLayout>
