--- a/animation_test_app/app/src/main/res/layout/activity_main.xml
+++ b/animation_test_app/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#e8fff4"
              tools:context=".MainActivity">
-
-    <TextView
-            android:id="@+id/test_textView"
-            android:layout_width="50sp"
-            android:layout_height="50sp"
-            android:background="@android:drawable/ic_dialog_info" />
 
     <FrameLayout
             android:id="@+id/menuLayout"
@@ -66,6 +61,16 @@
             android:layout_width="50sp"
             android:layout_height="50sp"
             android:background="@android:drawable/ic_menu_add"
-            android:layout_gravity="bottom|end" />
+            android:layout_gravity="bottom|end"
+            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"/>
+    <ListView
+            android:layout_width="0dp"
+            android:layout_height="0dp" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+            android:id="@+id/receiver_listView" tools:listitem="@layout/receiver_list_row"
+            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
 
-</FrameLayout>
+</android.support.constraint.ConstraintLayout>
