--- a/animation_test_app/app/src/main/res/layout/activity_main.xml
+++ b/animation_test_app/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,29 @@
              android:background="#e8fff4"
              tools:context=".MainActivity">
 
+    <ViewFlipper
+            android:layout_height="0dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" android:id="@+id/viewFlipper" android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toTopOf="@+id/next_button" android:layout_width="0dp">
+
+
+        <Switch
+                android:text="Switch1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/switch1"/>
+        <ListView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" android:id="@+id/receiver_listView">
+        </ListView>
+        <TextView
+                android:text="3rd Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" android:id="@+id/textView"/>
+    </ViewFlipper>
     <FrameLayout
             android:id="@+id/menuLayout"
             android:layout_width="match_parent"
@@ -64,13 +87,22 @@
             android:layout_gravity="bottom|end"
             app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
             app:layout_constraintBottom_toBottomOf="parent"/>
-    <ListView
-            android:layout_width="0dp"
-            android:layout_height="0dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:id="@+id/receiver_listView" tools:listitem="@layout/receiver_list_row"
-            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"/>
+    <Button
+            android:text="@string/previous_button"
+            android:layout_width="wrap_content"
+            android:layout_height="51dp"
+            android:id="@+id/previous_button" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp"
+            android:layout_marginBottom="9dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:onClick="showNext"/>
+    <Button
+            android:text="@string/next_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/next_button"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="70dp"
+            android:onClick="showPrevious"/>
 
 </android.support.constraint.ConstraintLayout>
